kube/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
  - name: "80"
    port: 888
    targetPort: 888
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
