kube/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  - name: "28017"
    port: 28017
    targetPort: 28017
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
