kube/networkpolicy.yml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: NetworkPolicy
  metadata:
    generation: 1
    name: internal-policy
    namespace: default
    resourceVersion: "8386"
    selfLink: /apis/extensions/v1beta1/namespaces/default/networkpolicies/internal-policy
    uid: 685bf449-4c41-11e9-94a1-0242ac110029
  spec:
    egress:
    - {}
    ingress:
    - from:
      - podSelector:
          matchLabels:
            role: app
    podSelector:
      matchLabels:
        name: db
    policyTypes:
    - Egress
    - Ingress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
